# hal_gd32

./: CMakeLists.txt  README.md
devices/: CMakeLists.txt
devices/gd32e1xx/: CMakeLists.txt
devices/gd32e1xx/GD32E10x_Firmware_Library_V1.0.3/Examples/ADC/ADC0_ADC1_regular_parallel/: main.c  readme.txt
devices/gd32e1xx/GD32E10x_Firmware_Library_V1.0.3/Examples/ADC/ADC0_EXTI_trigger_regular_inserted_channel/: gd32e10x_it.c  gd32e10x_it.h  main.c  readme.txt
devices/gd32e1xx/GD32E10x_Firmware_Library_V1.0.3/Examples/ADC/ADC0_TIMER1_trigger_inserted_channel/: gd32e10x_it.c  gd32e10x_it.h  main.c  readme.txt  systick.h
devices/gd32e1xx/GD32E10x_Firmware_Library_V1.0.3/Examples/ADC/ADC0_regular_channel_discontinuous_mode/: main.c  readme.txt  systick.c
devices/gd32e1xx/GD32E10x_Firmware_Library_V1.0.3/Examples/ADC/ADC0_regular_channel_with_DMA/: gd32e10x_it.c  main.c  readme.txt
devices/gd32e1xx/GD32E10x_Firmware_Library_V1.0.3/Examples/ADC/ADC0_temperature_Vref/: main.c  readme.txt
devices/gd32e1xx/GD32E10x_Firmware_Library_V1.0.3/Examples/ADC/ADC1_analog_watchdog/: gd32e10x_it.c  gd32e10x_it.h  (+3 more)
devices/gd32e1xx/GD32E10x_Firmware_Library_V1.0.3/Template/: gd32e10x_it.c  main.c  main.h  readme.txt
devices/gd32e1xx/GD32E10x_Firmware_Library_V1.0.3/Template/IAR_project/: Project.dep  Project.ewp  Project.ewt
devices/gd32e1xx/GD32E10x_Firmware_Library_V1.0.3/Utilities/: gd32e10x_eval.c  gd32e10x_eval.h  gd32e10x_lcd_eval.c  gd32e10x_lcd_eval.h
devices/gd32e1xx/GD32E10x_Firmware_Library_V1.0.3/Utilities/LCD_Commom/: lcd_font.c  lcd_font.h  lcd_log.c  lcd_log.h
(+410 files in other folders)
